2004-07-28  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/Dia.metadata: Use /api/namespace like gtk#

2004-07-15  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* COPYING: Changed from GNU GPL to GNU LGPL
	* configure.in: Bump version to 0.4.1
	* NEWS: Added license change
	* dia/*.cs: Ditto
	* dia/*.custom: Ditto
	* sample/*.cs: Ditto

2004-07-14  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Moved glue makefile
	  Added diacanvas-sharp.pc
	  Added diacanvas-sharp-sample
	  Added AssemblyInfo.cs
	  Check for GAC
	  Check for Mono or .NET
	* diacanvas-sharp.pc.in: Added
	* makefile.am: Removed glue dir
	* NEWS: Updated
	* dia/AssemblyInfo.cs.in: Added
	* dia/diacanvas-api.raw: Added
	* dia/diacanvas-api.xml: Removed
	* dia/makefile.am: Use the build method Gtk# uses
	  Added glue dir
	* dia/.cvsignore: Ignore diacanvas-api.xml
	* dia/diacanvas-sharp.snk: Added
	* dia/glue/dia-canvas-item.c: Added
	* dia/glue/dia-canvas.c: Added
	* dia/glue/dia-canvas-line.c: Added
	* dia/glue/dia-canvas-line.c.new: Added
	* dia/glue/dia-canvas-view.c: Added
	* dia/glue/dia-event.c: Added
	* dia/glue/makefile.am: Added
	* glue: Removed, moved into dia
	* sample/makefile.am: Install sample
	* sample/diacanvas-sharp-sample.in: Runscript added
	* sample/.cvsignore: Added Runscript
	* sources/diacanvas-sharp-sources.xml: Target DiaCanvas-0.13.0
	  Output to .raw instead of .xml
	* sources/makefile: Target DiaCanvas-0.13.0


2004-07-10  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/Dia.metadata: replaced disabledefaultconstructor 
	  with disable_void_ctor, thanks tberman
	* sample/makefile.am: Use -pkg for assemblies

2004-07-04  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Targets Mono-1.0, Gtk#-1.0 and DiaCanvas2-0.13.0
	* dia/makefile.am: Reference assemblies properly

2004-04-06  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/makefile: Targets DiaCanvas2-0.12.0
	* sources/diacanvas-sharp-sources.xml: Ditto
	* NEWS: Ditto