@@ -36,7 +36,7 @@ public class CanvasTextBox : CanvasGroup {
 		text = new CanvasText();
 		text.Font = FontDescription.FromString ("sans 20");
 		text.Text = "Hi, im editable";
-		text.Width =  200;
+		text.Width =  205;
 		text.Height = 100;
 		Add (text);
 		text.EditingDone += new EditingDoneHandler (editing_done);
